--- a/RecSys - CF.ipynb
+++ b/RecSys - CF.ipynb
@@ -16,7 +16,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import pairwise_distances"
    ]
   },
   {
@@ -34,13 +36,13 @@
    "source": [
     "# Read in all the records into a data frame\n",
     "names = ['user_id', 'item_id', 'rating', 'timestamp']\n",
-    "df = pd.read_csv('ml-100k/u.data', sep='\\t', names=names)\n",
+    "df = pd.read_csv('/home/nbuser/library/u.data', sep='\\t', names=names)\n",
     "\n",
     "# Get the unique user IDs and movie IDs from the transactional data\n",
     "n_users = df.user_id.unique().shape[0]\n",
     "n_items = df.item_id.unique().shape[0]\n",
-    "print str(n_users) + 'users'\n",
-    "print str(n_items) + 'items'"
+    "print(str(n_users) + ' users')\n",
+    "print(str(n_items) + ' items')"
    ]
   },
   {
@@ -56,8 +58,15 @@
     "sparsity = float(len(ratings.nonzero()[0]))\n",
     "sparsity /= (ratings.shape[0] * ratings.shape[1])\n",
     "sparsity *= 100\n",
-    "print(sparsity)\n",
-    "\n",
+    "print(sparsity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def train_test_split(ratings):\n",
     "    test = np.zeros(ratings.shape)\n",
     "    train = ratings.copy()\n",
@@ -68,10 +77,24 @@
     "        test[user, test_ratings] = ratings[user, test_ratings]\n",
     "    \n",
     "    assert(np.all(train * test) == 0)\n",
-    "    return train, test\n",
-    "\n",
-    "train, test = train_test_split(ratings)\n",
-    "        \n",
+    "    return train, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = train_test_split(ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def slow_similarity(ratings, kind='user'):\n",
     "    if kind == 'user':\n",
     "        axmax = 0\n",
@@ -89,8 +112,15 @@
     "                rui_sqrd += ratings[u, i] ** 2\n",
     "                ruprimei_sqrd += ratings[uprime, i] ** 2\n",
     "            sim[u, uprime] /= rui_sqrd * ruprimei_sqrd\n",
-    "    return sim\n",
-    "\n",
+    "    return sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def fast_similarity(ratings, kind='user', epsilon=0.9):\n",
     "    # epsilon -> small number for handling dived-by-zero errors\n",
     "    if kind == 'user':\n",
@@ -98,13 +128,27 @@
     "    elif kind == 'item':\n",
     "        sim = ratings.T.dot(ratings) + epsilon\n",
     "    norms = np.array([np.sqrt(np.diagonal(sim))])\n",
-    "    return (sim/norms/norms.T)\n",
-    "\n",
+    "    return (sim/norms/norms.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "user_similarity = fast_similarity(train, kind='user')\n",
     "item_similarity = fast_similarity(train, kind='item')\n",
     "#print(user_similarity[:4, :4])\n",
-    "#print(item_similarity[:4, :4])\n",
-    "\n",
+    "#print(item_similarity[:4, :4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def predict_slow_simple(ratings, similarity, kind='user'):\n",
     "    pred = np.zeros(ratings.shape)\n",
     "    if kind == 'user':\n",
@@ -119,27 +163,54 @@
     "                pred[i, j] = similarity[j, :].dot(ratings[i, :].T)\\\n",
     "                             /np.sum(np.abs(similarity[j, :]))\n",
     "\n",
-    "        return pred\n",
-    "        \n",
+    "        return pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def predict_fast_simple(ratings, similarity, kind='user'):\n",
     "    if kind == 'user':\n",
     "        return similarity.dot(ratings) / np.array([np.abs(similarity).sum(axis=1)]).T\n",
     "    elif kind == 'item':\n",
-    "        return ratings.dot(similarity) / np.array([np.abs(similarity).sum(axis=1)])\n",
-    "        \n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "        return ratings.dot(similarity) / np.array([np.abs(similarity).sum(axis=1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_mse(pred, actual):\n",
     "    #ignore nonzero terms\n",
     "    pred = pred[actual.nonzero()].flatten()\n",
     "    actual = actual[actual.nonzero()].flatten()\n",
-    "    return mean_squared_error(pred, actual)\n",
-    "\n",
+    "    return mean_squared_error(pred, actual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_rmse(pred, actual):\n",
     "    # Ignore nonzero terms.\n",
     "    pred = pred[actual.nonzero()].flatten()\n",
     "    actual = actual[actual.nonzero()].flatten()\n",
-    "    return mean_squared_error(pred, actual) ** 0.5\n",
-    "\n",
+    "    return mean_squared_error(pred, actual) ** 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "item_prediction = predict_fast_simple(ratings, item_similarity, kind='item')\n",
     "user_prediction = predict_fast_simple(ratings, user_similarity, kind='user')\n",
     "\n",
@@ -152,8 +223,15 @@
     "print 'User-based CF RMSE in test: ' + str(get_rmse(user_prediction, test))\n",
     "print 'Item-based CF MSE in test: ' + str(get_mse(item_prediction, test))\n",
     "print 'Item-based CF RMSE in test: ' + str(get_rmse(item_prediction, test))\n",
-    "print 'cf mse: '+ str((get_rmse(user_prediction, test)+get_rmse(item_prediction, test))/2)\n",
-    "\n",
+    "print 'cf mse: '+ str((get_rmse(user_prediction, test)+get_rmse(item_prediction, test))/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "### comment block starts here\n",
     "def predict_topk(ratings, similarity, kind='user', k=40):\n",
     "    pred = np.zeros(ratings.shape)\n",
@@ -170,15 +248,37 @@
     "                pred[i, j] = similarity[j, :][top_k_items].dot(ratings[i, :][top_k_items].T) \n",
     "                pred[i, j] /= np.sum(np.abs(similarity[j, :][top_k_items]))        \n",
     "    \n",
-    "    return pred        \n",
-    "def predict_fast_topk(ratings, similarity, kind='user', k=40):\n",
-    "    \n",
-    "    return\n",
+    "    return pred  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_fast_topk(ratings, similarity, kind='user', k=40):  \n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#pred = predict_topk(train, user_similarity, kind='user', k=50)\n",
     "#print 'Top-k User-based CF MSE: ' + str(get_mse(pred, test))\n",
     "#pred = predict_topk(train, item_similarity, kind='item', k=15)\n",
-    "#print 'Top-k Item-based CF MSE: ' + str(get_mse(pred, test))\n",
-    "    \n",
+    "#print 'Top-k Item-based CF MSE: ' + str(get_mse(pred, test))   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def predict_nobias(ratings, similarity, kind='user'):\n",
     "    if kind == 'user':\n",
     "        user_bias = ratings.mean(axis=1)\n",
@@ -190,12 +290,27 @@
     "        ratings = (ratings - item_bias[np.newaxis, :]).copy()\n",
     "        pred = ratings.dot(similarity) / np.array([np.abs(similarity).sum(axis=1)])\n",
     "        pred += item_bias[np.newaxis, :]\n",
-    "        \n",
-    "    return pred\n",
+    "    return pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#user_pred = predict_nobias(train, user_similarity, kind='user')\n",
     "#print 'Bias-subtracted User-based CF MSE: ' + str(get_mse(user_pred, test))\n",
     "#item_pred = predict_nobias(train, item_similarity, kind='item')\n",
-    "#print 'Bias-subtracted Item-based CF MSE: ' + str(get_mse(item_pred, test))\n",
+    "#print 'Bias-subtracted Item-based CF MSE: ' + str(get_mse(item_pred, test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def predict_topk_nobias(ratings, similarity, kind='user', k=40):\n",
     "    pred = np.zeros(ratings.shape)\n",
     "    if kind == 'user':\n",
@@ -217,13 +332,28 @@
     "                pred[i, j] /= np.sum(np.abs(similarity[j, :][top_k_items])) \n",
     "        pred += item_bias[np.newaxis, :]\n",
     "        \n",
-    "    return pred   \n",
-    " \n",
+    "    return pred "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "k_array = [5, 15, 30, 50, 100, 200]\n",
     "user_train_mse = []\n",
     "user_test_mse = []\n",
     "item_test_mse = []\n",
-    "item_train_mse = []\n",
+    "item_train_mse = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for k in k_array:\n",
     "    user_pred = predict_topk_nobias(train, user_similarity, kind='user', k=k)\n",
     "    item_pred = predict_topk_nobias(train, item_similarity, kind='item', k=k)\n",
@@ -240,15 +370,31 @@
     "    for line in f.readlines():\n",
     "        info = line.split('|')\n",
     "        idx_to_movie[int(info[0])-1] = info[4]\n",
-    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def top_k_movies(similarity, mapper, movie_idx, k=6):\n",
-    "    return [mapper[x] for x in np.argsort(similarity[movie_idx,:])[:-k-1:-1]]   \n",
+    "    return [mapper[x] for x in np.argsort(similarity[movie_idx,:])[:-k-1:-1]]   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "idx = 0 # Toy Story\n",
     "movies = top_k_movies(item_similarity, idx_to_movie, idx)\n",
     "for movie in movies:\n",
     "    print movie\n",
     "print '\\n'\n",
-    "from sklearn.metrics import pairwise_distances\n",
+    "\n",
     "# Convert from distance to similarity\n",
     "item_correlation = 1 - pairwise_distances(train.T, metric='correlation')\n",
     "item_correlation[np.isnan(item_correlation)] = 0.\n",
@@ -281,6 +427,13 @@
     "\n",
     "# comment block ends here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
