--- a/RecSys - Content-Based.ipynb
+++ b/RecSys - Content-Based.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "9       10   53      M         lawyer    90703"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "[10 rows x 24 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -906,20 +906,20 @@
        "9    1        0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Remove the last column (timestamp) from the dataframe as it's not required for this analysis\n",
-    "df_u_item_final = df_u_item.drop(['release date', 'video release date','IMDb URL','unknown'], axis=1)\n",
+    "# Remove the several columns from the dataframe as it's not required for this analysis\n",
+    "df_u_item_final = df_u_item.drop(['release date', 'video release date','IMDb URL'], axis=1)\n",
     "df_u_item_final.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "9382         1       163       4  875072442"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1079,6 +1079,7 @@
        "      <th></th>\n",
        "      <th>user id</th>\n",
        "      <th>movie id</th>\n",
+       "      <th>rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1086,71 +1087,81 @@
        "      <th>66567</th>\n",
        "      <td>1</td>\n",
        "      <td>55</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62820</th>\n",
        "      <td>1</td>\n",
        "      <td>203</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10207</th>\n",
        "      <td>1</td>\n",
        "      <td>183</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9971</th>\n",
        "      <td>1</td>\n",
        "      <td>150</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22496</th>\n",
        "      <td>1</td>\n",
        "      <td>68</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9811</th>\n",
        "      <td>1</td>\n",
        "      <td>201</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9722</th>\n",
        "      <td>1</td>\n",
        "      <td>157</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9692</th>\n",
        "      <td>1</td>\n",
        "      <td>184</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9566</th>\n",
        "      <td>1</td>\n",
        "      <td>210</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9382</th>\n",
        "      <td>1</td>\n",
        "      <td>163</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       user id  movie id\n",
-       "66567        1        55\n",
-       "62820        1       203\n",
-       "10207        1       183\n",
-       "9971         1       150\n",
-       "22496        1        68\n",
-       "9811         1       201\n",
-       "9722         1       157\n",
-       "9692         1       184\n",
-       "9566         1       210\n",
-       "9382         1       163"
+       "       user id  movie id rating\n",
+       "66567        1        55      1\n",
+       "62820        1       203      1\n",
+       "10207        1       183      1\n",
+       "9971         1       150      1\n",
+       "22496        1        68      1\n",
+       "9811         1       201      1\n",
+       "9722         1       157      1\n",
+       "9692         1       184      1\n",
+       "9566         1       210      1\n",
+       "9382         1       163      1"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1233,7 @@
        "          0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1632,7 @@
        "[10 rows x 1682 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,37 +1643,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Finally, we create a dense matrix:\n",
-    "rating_matrix = rating_matrix.to_dense().as_matrix()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['1', '1', '1', ..., 0, 0, 0],\n",
-       "       ['1', 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "array([[ 1.,  1.,  1., ...,  0.,  0.,  0.],\n",
+       "       [ 1.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
        "       ..., \n",
-       "       ['1', 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, '1', 0, ..., 0, 0, 0]], dtype=object)"
+       "       [ 1.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0., ...,  0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Finally, we create a dense matrix:\n",
+    "rating_matrix = rating_matrix.to_dense().as_matrix()\n",
+    "rating_matrix = rating_matrix.astype(float)\n",
     "rating_matrix"
    ]
   },
@@ -1683,21 +1687,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can't multiply sequence by non-int of type 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-76-c7402d00b04a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Run the following code to compute the dot product for the user profile creation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprofile_user\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrating_matrix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprofile_item\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'float'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the following code to compute the dot product for the user profile creation\n",
     "from scipy import linalg, dot\n",
@@ -1706,9 +1698,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[  1.05584676e-02,   1.95918055e-04,   0.00000000e+00, ...,\n",
+       "           0.00000000e+00,   0.00000000e+00,   1.14287525e-04],\n",
+       "        [  2.61638259e-03,   0.00000000e+00,   0.00000000e+00, ...,\n",
+       "           0.00000000e+00,   6.61649570e-05,   0.00000000e+00],\n",
+       "        [  2.12257969e-03,   0.00000000e+00,   0.00000000e+00, ...,\n",
+       "           0.00000000e+00,   0.00000000e+00,   6.58037274e-05],\n",
+       "        ..., \n",
+       "        [  8.66820738e-04,   0.00000000e+00,   0.00000000e+00, ...,\n",
+       "           0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
+       "        [  3.12860366e-03,   0.00000000e+00,   1.25699299e-04, ...,\n",
+       "           0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
+       "        [  6.67011899e-03,   7.21759758e-05,   0.00000000e+00, ...,\n",
+       "           0.00000000e+00,   6.61649570e-05,   0.00000000e+00]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "profile_user"
    ]
@@ -1731,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1744,9 +1759,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.37933953,  0.70602435,  0.70602435, ...,  0.43686821,\n",
+       "         0.67350958,  0.47480586],\n",
+       "       [ 0.35793086,  0.60775851,  0.60775851, ...,  0.4185904 ,\n",
+       "         0.48309629,  0.39780516],\n",
+       "       [ 0.23317522,  0.42898293,  0.42898293, ...,  0.47900497,\n",
+       "         0.40789661,  0.3468426 ],\n",
+       "       ..., \n",
+       "       [ 0.41078466,  0.68059272,  0.68059272, ...,  0.38052458,\n",
+       "         0.46525186,  0.39561291],\n",
+       "       [ 0.32613662,  0.57769765,  0.57769765, ...,  0.46952504,\n",
+       "         0.54799414,  0.45202088],\n",
+       "       [ 0.36968034,  0.69780685,  0.69780685, ...,  0.42856433,\n",
+       "         0.71758565,  0.46912171]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We can see the results of the preceding calculation as follows:\n",
     "similarityCalc"
@@ -1754,26 +1792,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now, let's format the preceding results calculated as binary data (0,1), as follows:\n",
     "\n",
     "# First, we convert the rating to binary format:\n",
-    "final_pred = np.where(similarityCalc > 0.6, 1, 0)"
+    "final_pred = np.where(similarityCalc > 0.80, 1, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 0, 0, 0])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Then we examine the final predictions of first three users:\n",
-    "final_pred[1]\n",
-    "final_pred[2]\n",
-    "final_pred[3]"
+    "final_pred[1]"
    ]
   },
   {
@@ -1786,14 +1833,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([   5,   39,  101,  126,  130,  133,  151,  184,  193,  204,  210,\n",
+       "         266,  378,  416,  418,  419,  426,  429,  433,  444,  450,  451,\n",
+       "         479,  480,  481,  482,  483,  484,  486,  488,  496,  497,  500,\n",
+       "         502,  506,  510,  513,  518,  520,  525,  579,  600,  604,  607,\n",
+       "         610,  613,  614,  623,  625,  632,  655,  656,  660,  666,  674,\n",
+       "         704,  744,  834,  836,  841,  850,  967, 1019, 1063, 1090, 1117,\n",
+       "        1123, 1124, 1197, 1202, 1203, 1285, 1297, 1298, 1309, 1349, 1396,\n",
+       "        1449, 1451, 1452, 1453, 1454, 1457, 1460, 1475, 1541, 1557, 1570,\n",
+       "        1579, 1673]),)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# For user 213 the recommended items are generated as follows:\n",
     "indexes_of_user = np.where(final_pred[213] == 1)\n",
     "indexes_of_user"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
