--- a/RecSys - CF User-Based.ipynb
+++ b/RecSys - CF User-Based.ipynb
@@ -5,12 +5,19 @@
    "metadata": {},
    "source": [
     "<h1>User-Based Collaborative Filtering</h1>\n",
-    "A recommender that is based on the user-based collaborative filtering approach.\n",
-    "\n",
+    "![Recommendation Systems Approaches](https://raw.githubusercontent.com/ziababar/recommender/master/images/Recommendation%20Systems.jpg)\n",
+    "A recommender that is based on the user-based collaborative filtering approach."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The recommender system will perform the following steps:\n",
     "1. Retrieve item and activity data\n",
     "2. Build the recommendation engine\n",
-    "3. Generate recommendations"
+    "3. Generate recommendations\n",
+    "![Collaborative Filtering](https://raw.githubusercontent.com/ziababar/recommender/master/images/collaborative-filtering.png)"
    ]
   },
   {
@@ -81,7 +88,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Step 2 - Build Recommendation Engine</h2>"
+    "<h2>Step 2 - Determine Similar Users</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![User-Based Collaborative Filtering](https://raw.githubusercontent.com/ziababar/recommender/master/images/user-based.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are multiple ways to determine similarity between users or items. Some common approaches used in recommendation systems include,\n",
+    " - Neighbourhood-based techniques\n",
+    "   - Euclidean distance\n",
+    "   - Cosine similarity\n",
+    "   - Jaccard similarity\n",
+    "   - Pearson correlation coefficient\n",
+    " - Clustering techniques\n",
+    "   - K-means clustering\n",
+    "   \n",
+    "In this example, we'll be using Pearson correlation coefficient to determine similar items."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge the two dataframes into one single dataframe. This allows the depiction of all the transactional activity in one single dataframe, leading to better and faster analysis."
    ]
   },
   {
@@ -91,7 +128,6 @@
    "outputs": [],
    "source": [
     "ratings = pd.merge(df_u_item, df_u_data)\n",
-    "\n",
     "ratings.head(5)"
    ]
   },
@@ -116,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the magic happens - pandas has a built-in corr() method that will compute a correlation score for every column pair in the matrix! This gives us a correlation score between every pair of movies (where at least one user rated both movies - otherwise NaN's will show up.) That's amazing!"
+    "From the user rating dataframe above, create a correlation matrix. This gives us a correlation score between every pair of movies (where at least one user rated both movies - otherwise NaN's will show up.)"
    ]
   },
   {
@@ -125,6 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use pandas built-in corr() method that will compute a correlation score for every column pair in the matrix\n",
     "corrMatrix = userRatings.corr()\n",
     "corrMatrix.head()"
    ]
@@ -133,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, we want to avoid spurious results that happened from just a handful of users that happened to rate the same pair of movies. In order to restrict our results to movies that lots of people rated together - and also give us more popular results that are more easily recongnizable - we'll use the min_periods argument to throw out results where fewer than 100 users rated a given movie pair:"
+    "Eliminate spurious results that happened from just a handful of users that happened to rate the same pair of movies. This restricts our results to movies that lots of people rated together - and also give us more popular results that are more easily recongnizable."
    ]
   },
   {
@@ -142,7 +179,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corrMatrix = userRatings.corr(method='pearson', min_periods=20)\n",
+    "# Use the min_periods argument to throw out results where fewer than 100 users rated a given movie pair\n",
+    "corrMatrix = userRatings.corr(method='pearson', min_periods=100)\n",
     "corrMatrix.head()"
    ]
   },
@@ -157,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's produce some movie recommendations for user ID 0, who I manually added to the data set as a test case. This guy really likes Star Wars and The Empire Strikes Back, but hated Gone with the Wind. I'll extract his ratings from the userRatings DataFrame, and use dropna() to get rid of missing data (leaving me only with a Series of the movies I actually rated:)"
+    "Produce movie recommendations for a test user ID. Generally the input data would be divided into training and testing segments, with the recommendations being produced for users that were not part of the training data. This would permit the evaluation of the recommendation model. However, here we keep things simple and just reuse one of the actual users from the training data to see how the recommendation mode works."
    ]
   },
   {
@@ -166,6 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrieve ratings made by user 1\n",
     "myRatings = userRatings.loc[1].dropna()\n",
     "myRatings"
    ]
@@ -174,9 +213,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's go through each movie I rated one at a time, and build up a list of possible recommendations based on the movies similar to the ones I rated.\n",
-    "\n",
-    "So for each movie I rated, I'll retrieve the list of similar movies from our correlation matrix. I'll then scale those correlation scores by how well I rated the movie they are similar to, so movies similar to ones I liked count more than movies similar to ones I hated:"
+    "Let's go through each movie rated one at a time, and build up a list of possible recommendations based on the movies similar to the ones that the user rated. This is done as follows,\n",
+    " - For each movie rated, retrieve the list of similar movies from the correlation matrix\n",
+    " - Scale those correlation scores by how well the movie (originally rated by the user) to the similar movies\n",
+    " - Thus movies similar to ones the user likes count more than movies similar to ones the user hates"
    ]
   },
   {
@@ -202,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Glance at our results so far:\n",
+    "#Glance at the similar movie candidates results so far:\n",
     "simCandidates.sort_values(inplace = True, ascending = False)\n",
     "simCandidates.head(5)"
    ]
@@ -211,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is starting to look like something useful! Note that some of the same movies came up more than once, because they were similar to more than one movie I rated. We'll use groupby() to add together the scores from movies that show up more than once, so they'll count more:"
+    "Some of the same movies came up more than once, because they were similar to more than one movie originally rated by the user. Use groupby() to add together the scores from movies that show up more than once, so they'll count more:"
    ]
   },
   {
@@ -224,6 +264,13 @@
     "simCandidates.sort_values(inplace = True, ascending = False)\n",
     "simCandidates.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
