--- a/RecSys - Simple Recommender.ipynb
+++ b/RecSys - Simple Recommender.ipynb
@@ -98,13 +98,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge the three dataframes into one single dataframe. This allows the depiction of all the transactional activity in one single dataframe, leading to better and faster analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#First we merge the three dataframes into one single dataframe\n",
-    "\n",
     "#Create one data frame from the three\n",
     "dataset = pd.merge(pd.merge(df_u_item, df_u_data), df_u_user)\n",
     "dataset.head(10)"
@@ -114,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we use groupby to group the movies by their titles. Then we use the size function to returns the total number of entries under each movie title. This will help us get the number of people who rated the movie/ the number of ratings.\n",
+    "Use groupby to group the movies by their titles, and the size function to returns the total number of entries under each movie title. This will help us get the number of people who rated the movie/ the number of ratings.\n",
     "\n"
    ]
   },
@@ -124,51 +129,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get total rating count by movie\n",
     "ratings_total = dataset.groupby('movie title').size()\n",
-    "print(ratings_total.head())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next we try to take the mean ratings of each movie using the mean function. First we groupby movie title. From the resulting dataframe we select only the movie title and the rating headers. Then we use the mean function on them.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings_mean = (dataset.groupby('movie title'))['movie title','rating'].mean()\n",
-    "print(ratings_mean.head())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now if you check ratings_total then you will find its a Series and not a Data Frame. So we will convert that into a dataframe. In the ratings_mean we will see that the movie title has been converted from a column to an index. So we make that a column again."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#modify the dataframes so that we can merge the two\n",
+    "\n",
+    "# Convert the Series ratings_total type into a dataframe\n",
     "ratings_total = pd.DataFrame({'movie title':ratings_total.index, 'total ratings': ratings_total.values})\n",
-    "ratings_mean['movie title'] = ratings_mean.index"
+    "ratings_total.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we head for the merging part. Now we sort the values by the total rating and this helps us sort the data frame by the number of people who viewed the movie"
+    "Take the mean ratings of each movie using the mean function. First we groupby movie title. From the resulting dataframe we select only the movie title and the rating headers. Then we use the mean function on them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the mean rating for each movie\n",
+    "ratings_mean = (dataset.groupby('movie title'))['movie title','rating'].mean()\n",
+    "\n",
+    "# In the previous operation, movie title has been converted from a column to an index. So we make that a column again\n",
+    "ratings_mean['movie title'] = ratings_mean.index\n",
+    "\n",
+    "ratings_mean.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge the two dataframes (containing mean ratings and total ratings) together. While doing the merge, sort the values by the total rating (i.e. based on popularity of the movie)."
    ]
   },
   {
@@ -178,7 +173,7 @@
    "outputs": [],
    "source": [
     "final = pd.merge(ratings_mean, ratings_total).sort_values(by = 'total ratings', ascending= False)\n",
-    "print(final.head())"
+    "final.head(10)"
    ]
   },
   {
@@ -189,10 +184,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(final.describe())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<h2>Step 3 - Generating Recommendations</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For generating recommendations, we look at the most popular movies. These can be based on the\n",
+    "- total ratings for a movie\n",
+    "- average rating of a movie"
    ]
   },
   {
@@ -201,10 +214,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(final.describe())\n",
     "final = final[:300].sort_values(by = 'rating', ascending = False)\n",
     "print(final.head())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
